[gd_scene load_steps=10 format=3 uid="uid://dmi0l5pacct23"]

[ext_resource type="PackedScene" uid="uid://byy0nyaw6gtki" path="res://Objects/Room_objects/objMusicPlayer.tscn" id="1_76nfi"]
[ext_resource type="Script" path="res://Rooms/scrBossRoom.gd" id="1_ec4xw"]
[ext_resource type="PackedScene" uid="uid://bp5rqk4l7tesk" path="res://Objects/Player/objPlayer.tscn" id="2_r0hhx"]
[ext_resource type="PackedScene" uid="uid://bm40t36a6m8sc" path="res://Objects/Tiles/til32x32.tscn" id="3_35xyy"]
[ext_resource type="PackedScene" uid="uid://b31w5fm4w5857" path="res://Objects/Room_objects/objSavePoint.tscn" id="4_eyj7o"]
[ext_resource type="PackedScene" uid="uid://cdx3h81o7hqb4" path="res://Objects/Room_objects/objCameraDynamic.tscn" id="5_5w7pa"]
[ext_resource type="PackedScene" uid="uid://cepb2ntnm3yds" path="res://Objects/Neos/objCameraFocusRegion.tscn" id="5_kgg2r"]
[ext_resource type="PackedScene" uid="uid://qpkvcl0iv3c3" path="res://Objects/Neos/objGundamBoss.tscn" id="6_ekijr"]
[ext_resource type="PackedScene" uid="uid://den5o41ncyqsn" path="res://Objects/Neos/Boss/objMissile.tscn" id="9_2q4hd"]

[node name="rBossRoom" type="Node2D"]
script = ExtResource("1_ec4xw")

[node name="Environment" type="Node2D" parent="."]

[node name="objMusicPlayer" parent="Environment" instance=ExtResource("1_76nfi")]
position = Vector2(-16, 16)

[node name="objPlayer" parent="Environment" instance=ExtResource("2_r0hhx")]
position = Vector2(472, 464)

[node name="til32x32" parent="Environment" instance=ExtResource("3_35xyy")]
rendering_quadrant_size = 32
layer_0/tile_data = PackedInt32Array(983040, 0, 1, 983064, 0, 1, 983063, 0, 1, 983062, 0, 1, 983061, 0, 1, 983060, 0, 1, 983059, 0, 1, 983058, 0, 1, 983057, 0, 1, 983056, 0, 1, 983055, 0, 1, 983054, 0, 1, 983053, 0, 1, 983052, 0, 1, 983051, 0, 1, 983050, 0, 1, 983049, 0, 1, 983048, 0, 1, 983047, 0, 1, 983046, 0, 1, 983045, 0, 1, 983044, 0, 1, 983043, 0, 1, 983042, 0, 1, 983041, 0, 1, 1048576, 65536, 1, 1048577, 65536, 1, 1048578, 65536, 1, 1048579, 65536, 1, 1048580, 65536, 1, 1048581, 65536, 1, 1048582, 65536, 1, 1048583, 65536, 1, 1048584, 65536, 1, 1048585, 65536, 1, 1048586, 65536, 1, 1048587, 65536, 1, 1048588, 65536, 1, 1048589, 65536, 1, 1048590, 65536, 1, 1048591, 65536, 1, 1048592, 65536, 1, 1048593, 65536, 1, 1048594, 65536, 1, 1048595, 65536, 1, 1048596, 65536, 1, 1048597, 65536, 1, 1048598, 65536, 1, 1048599, 65536, 1, 1048600, 65536, 1, 1114136, 65536, 1, 1179672, 65536, 1, 1245208, 65536, 1, 1245207, 65536, 1, 1245206, 65536, 1, 1245205, 65536, 1, 1245204, 65536, 1, 1245203, 65536, 1, 1245202, 65536, 1, 1245201, 65536, 1, 1245200, 65536, 1, 1245199, 65536, 1, 1245198, 65536, 1, 1245197, 65536, 1, 1245196, 65536, 1, 1245195, 65536, 1, 1245194, 65536, 1, 1245193, 65536, 1, 1245192, 65536, 1, 1245191, 65536, 1, 1245190, 65536, 1, 1245189, 65536, 1, 1245188, 65536, 1, 1245187, 65536, 1, 1245186, 65536, 1, 1245185, 65536, 1, 1245184, 65536, 1, 1179648, 65536, 1, 1114112, 65536, 1, 1179653, 65536, 1, 1114117, 65536, 1, 1114116, 65536, 1, 1114115, 65536, 1, 1114114, 65536, 1, 1114113, 65536, 1, 1179649, 65536, 1, 1179650, 65536, 1, 1179651, 65536, 1, 1179652, 65536, 1, 1114118, 65536, 1, 1179654, 65536, 1, 1179655, 65536, 1, 1114119, 65536, 1, 1114120, 65536, 1, 1179656, 65536, 1, 1179657, 65536, 1, 1114121, 65536, 1, 1114122, 65536, 1, 1179658, 65536, 1, 1179659, 65536, 1, 1114123, 65536, 1, 1114124, 65536, 1, 1179660, 65536, 1, 1179661, 65536, 1, 1114125, 65536, 1, 1114126, 65536, 1, 1179662, 65536, 1, 1179663, 65536, 1, 1114127, 65536, 1, 1114128, 65536, 1, 1179664, 65536, 1, 1179665, 65536, 1, 1114129, 65536, 1, 1114130, 65536, 1, 1179666, 65536, 1, 1179667, 65536, 1, 1114131, 65536, 1, 1114132, 65536, 1, 1179668, 65536, 1, 1179669, 65536, 1, 1114133, 65536, 1, 1114134, 65536, 1, 1179670, 65536, 1, 1179671, 65536, 1, 1114135, 65536, 1)

[node name="objSavePoint" parent="Environment" instance=ExtResource("4_eyj7o")]
position = Vector2(304, 464)

[node name="Room_related" type="Node2D" parent="."]

[node name="CameraRegions" type="Node2D" parent="Room_related"]
visible = false

[node name="objCameraFocusRegion" parent="Room_related/CameraRegions" instance=ExtResource("5_kgg2r")]
position = Vector2(0, 32)
scale = Vector2(25, 19)

[node name="objCameraFocusRegion2" parent="Room_related/CameraRegions" instance=ExtResource("5_kgg2r")]
modulate = Color(0.735229, 0.957512, 0.99319, 0.486275)
position = Vector2(-192, -40)
scale = Vector2(37, 19)

[node name="objCameraDynamic" parent="Room_related" node_paths=PackedStringArray("target_node") instance=ExtResource("5_5w7pa")]
target_node = NodePath("../../Environment/objPlayer")
stop_left_at = -800
stop_up_at = -608
stop_right_at = 1600
stop_down_at = 1216

[node name="Gimmicks" type="Node2D" parent="."]

[node name="Hazards" type="Node2D" parent="."]

[node name="Trigger_related" type="Node2D" parent="."]

[node name="Boss" type="Node2D" parent="."]

[node name="objGundamBoss" parent="Boss" instance=ExtResource("6_ekijr")]
position = Vector2(464, 320)

[node name="AimSpawners" type="Node2D" parent="Boss"]
position = Vector2(0, 352)

[node name="objMissile" parent="." instance=ExtResource("9_2q4hd")]
position = Vector2(210.914, 458.435)

[connection signal="camera_mode_switch" from="Boss/objGundamBoss" to="." method="_on_obj_gundam_boss_camera_mode_switch"]
